# bevy_minesweeper

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile.toml  README.md  build_wasm.sh  index.html
.github/workflows/: ci.yml
assets/fonts/: credits.md  source.txt
assets/sprites/: credits.md  source.txt
board_plugin/: Cargo.toml
board_plugin/src/: events.rs  lib.rs
board_plugin/src/components/: bomb.rs  bomb_neighbor.rs  coordinates.rs  mod.rs  uncover.rs  uncovering.rs
board_plugin/src/events/: board_completed.rs  bomb_explosion.rs  mod.rs  tile_mark.rs
board_plugin/src/resources/: board.rs  board_assets.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
board_plugin/src/systems/: input.rs  mark.rs  uncover.rs
src/: button_materials.rs  button_type.rs  buttons.rs  main.rs
